Extracted ShuffleData**port to partial classes

--- a/Shuffle/Innofactor.Crm.Shuffle.csproj
+++ b/Shuffle/Innofactor.Crm.Shuffle.csproj
@@ -83,6 +83,8 @@
       <DependentUpon>ShuffleDefinition.xsd</DependentUpon>
     </Compile>
     <Compile Include="ShuffleCounter.cs" />
+    <Compile Include="ShuffleDataExport.cs" />
+    <Compile Include="ShuffleDataImport.cs" />
     <Compile Include="ShuffleEventArgs.cs" />
     <Compile Include="ShuffleHelper.cs" />
     <Compile Include="Shuffler.cs" />
