--- a/CI/packages.config
+++ b/CI/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Cinteros.DevUtils.8" version="8.1.1705.03" targetFramework="net452" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="8.2.0.2" targetFramework="net452" />
-  <package id="Microsoft.CrmSdk.Deployment" version="8.2.0.2" targetFramework="net452" />
-  <package id="Microsoft.CrmSdk.Workflow" version="8.2.0.2" targetFramework="net452" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="8.2.0.5" targetFramework="net452" />
+  <package id="Innofactor.Xrm.DevUtils.Common" version="9.0.1710.1" targetFramework="net452" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.0.5" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.0.5" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.0.5" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.0.5" targetFramework="net462" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.24.304111323" targetFramework="net452" />
-  <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.0.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net462" />
+  <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net462" />
 </packages>
