--- a/XTB/app.config
+++ b/XTB/app.config
@@ -12,11 +12,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="McTools.Xrm.Connection" publicKeyToken="96037217801d9658" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2016.3.29" newVersion="1.2016.3.29" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2018.4.16" newVersion="1.2018.4.16" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="McTools.Xrm.Connection.WinForms" publicKeyToken="f1559f79cf894e27" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.2016.3.29" newVersion="1.2016.3.29" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2018.4.16" newVersion="1.2018.4.16" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="NuGet.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -33,6 +33,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Crm.Sdk.Proxy" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Web.XmlTransform" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-15.0.0.0" newVersion="15.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
