--- a/XTB/packages.config
+++ b/XTB/packages.config
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Innofactor.Xrm.DevUtils.Common" version="9.0.1802.6" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.0.7" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.0.7" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.0.7" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.0.7" targetFramework="net462" />
+  <package id="DockPanelSuite" version="3.0.4" targetFramework="net462" />
+  <package id="DockPanelSuite.ThemeVS2015" version="3.0.4" targetFramework="net462" />
+  <package id="Innofactor.Xrm.DevUtils.Common" version="9.0.1804.11" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.3" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.3" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.3" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.3" targetFramework="net462" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.29.0" targetFramework="net462" />
-  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net452" />
-  <package id="MscrmTools.Xrm.Connection" version="1.2017.10.15" targetFramework="net462" />
+  <package id="Microsoft.Web.Xdt" version="2.1.2" targetFramework="net462" />
+  <package id="MscrmTools.Xrm.Connection" version="1.2018.4.16" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NuGet.Core" version="2.14.0" targetFramework="net452" />
-  <package id="XrmToolBoxPackage" version="1.2018.1.20" targetFramework="net462" />
+  <package id="XrmToolBoxPackage" version="1.2018.4.22" targetFramework="net462" />
 </packages>
