--- a/CI/Innofactor.Crm.CI.csproj
+++ b/CI/Innofactor.Crm.CI.csproj
@@ -98,8 +98,8 @@
   <ItemGroup>
     <Compile Include="Cmdlets\CrmAssemblyUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shuffle\ExportCrmShuffleCmdlet.cs" />
-    <Compile Include="Shuffle\ImportCrmShuffleCmdlet.cs" />
+    <Compile Include="Cmdlets\CrmShuffleExport.cs" />
+    <Compile Include="Cmdlets\CrmShuffleImport.cs" />
     <Compile Include="WebResources\SolutionComponentType.cs" />
     <Compile Include="Cmdlets\CrmResoucesUpdate.cs" />
     <Compile Include="WebResources\WebResourceManager.cs" />
@@ -177,7 +177,9 @@
     <Content Include="Extension\UpdateWebResources\UpdateWebResources.ps1" />
     <Content Include="Extension\UpdateAssembly\UpdateAssembly.ps1" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Shuffle\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>"$(ProjectDir)Extension\CopyLibToTasks.cmd" "$(TargetDir)" "$(ProjectDir)"</PostBuildEvent>
