Creating logger for `Obfuscate` command

--- a/CI/packages.config
+++ b/CI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ConfuserEx.Final" version="1.0.0" targetFramework="net462" developmentDependency="true" />
   <package id="Innofactor.Xrm.DevUtils.Common" version="9.0.1804.11" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.4" targetFramework="net462" />
   <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.4" targetFramework="net462" />
