Implementing simple cmdlet wrapper for `OutObfuscateAssembly`

--- a/CI/Innofactor.Crm.CI.csproj
+++ b/CI/Innofactor.Crm.CI.csproj
@@ -130,6 +130,7 @@
     <Content Include="Extension\MinifyJS\gulpfile.js" />
     <Content Include="Extension\WhoAmI\icon.png" />
     <None Include="app.config" />
+    <None Include="Extension\ObfuscateAssembly\ObfuscateAssembly.ps1" />
     <None Include="Extension\overview.md" />
     <None Include="Extension\WebResourcePatternSample.txt" />
     <Content Include="Extension\ApplyVersionToAssemblies\ApplyVersionToAssemblies.ps1" />
